<resources>
    <string name="app_name">MtekChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="list">List</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="news">News</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="profil">Profil</string>
</resources>